Refactoring started on nameing of weight to percentage match and cost. It was a bit jumbled. Still more to do to remove 'magic numbers' to constants and reference them